제어문/Yena Jung/3-2 while문
>>> treeHit=0
>>> while treeHit<=10:
...     treeHit=treeHit+1
...     print("나무를 %d번 찍었습니다." %treeHit)
...     if treeHit==10:
...             print("나무 넘어갑니다.")
...
나무를 1번 찍었습니다.
나무를 2번 찍었습니다.
나무를 3번 찍었습니다.
나무를 4번 찍었습니다.
나무를 5번 찍었습니다.
나무를 6번 찍었습니다.
나무를 7번 찍었습니다.
나무를 8번 찍었습니다.
나무를 9번 찍었습니다.
나무를 10번 찍었습니다.
나무 넘어갑니다.
나무를 11번 찍었습니다.
>>>
>>> prompt="""
... 1.Add
... 2.Del
... 3.List
... 4.Quit
...
... Enter number:"""
>>> number=0
>>> while number!=4:
...     print(prompt)
...     number=int(input())
...

1.Add
2.Del
3.List
4.Quit

Enter number:
1

1.Add
2.Del
3.List
4.Quit

Enter number:
4
>>>
>>> coffee=10
>>> money=300
>>> while money:
...     print("돈을 받았으니 커피를 줍니다.")
...     coffee=coffee-1
...     print("남은 커피의 양은 %d입니다." %coffee)
...     if coffee==0:
...             print("커피가 다 떨어졌습니다. 판매를 중지합니다.")
...             break
...
돈을 받았으니 커피를 줍니다.
남은 커피의 양은 9입니다.
돈을 받았으니 커피를 줍니다.
남은 커피의 양은 8입니다.
돈을 받았으니 커피를 줍니다.
남은 커피의 양은 7입니다.
돈을 받았으니 커피를 줍니다.
남은 커피의 양은 6입니다.
돈을 받았으니 커피를 줍니다.
남은 커피의 양은 5입니다.
돈을 받았으니 커피를 줍니다.
남은 커피의 양은 4입니다.
돈을 받았으니 커피를 줍니다.
남은 커피의 양은 3입니다.
돈을 받았으니 커피를 줍니다.
남은 커피의 양은 2입니다.
돈을 받았으니 커피를 줍니다.
남은 커피의 양은 1입니다.
돈을 받았으니 커피를 줍니다.
남은 커피의 양은 0입니다.
커피가 다 떨어졌습니다. 판매를 중지합니다.
>>> ㅊ
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'ᄎ' is not defined
>>>
>>> coffee=10
>>> while True:
...     money=int(input("돈을 넣어 주세요: "))
...     if money==300:
...     print("커피를 줍니다.")
  File "<stdin>", line 4
    print("커피를 줍니다.")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
>>>
>>> coffee=10
>>> while True:
...     money=int(input("돈을 넣어 주세요: "))
...     if money==300:
...             print("커피를 줍니다.")
...             coffee=coffee-1
...     elif money>300:
...             print("거스름돈 %d를 주고 커피를 줍니다." %(money-300))
...             coffee=coffee-1
...     else:
...             print("돈을 다시 돌려주고 커피를 주지 않습니다.")
...             print("남은 커피의 양은 %d개 입니다." %coffee)
...     if coffee==0:
...             print("커피가 다 떨어졌습니다. 판매를 중지합니다.")
...             break
...
돈을 넣어 주세요: 400
거스름돈 100를 주고 커피를 줍니다.
돈을 넣어 주세요: 300
커피를 줍니다.
돈을 넣어 주세요: 200
돈을 다시 돌려주고 커피를 주지 않습니다.
남은 커피의 양은 8개 입니다.
돈을 넣어 주세요: 8700
거스름돈 8400를 주고 커피를 줍니다.
돈을 넣어 주세요: 80
돈을 다시 돌려주고 커피를 주지 않습니다.
남은 커피의 양은 7개 입니다.
돈을 넣어 주세요: 700
거스름돈 400를 주고 커피를 줍니다.
돈을 넣어 주세요: 700
거스름돈 400를 주고 커피를 줍니다.
돈을 넣어 주세요: 300
커피를 줍니다.
돈을 넣어 주세요: 300
커피를 줍니다.
돈을 넣어 주세요: 300
커피를 줍니다.
돈을 넣어 주세요: 300
커피를 줍니다.
돈을 넣어 주세요: 300
커피를 줍니다.
커피가 다 떨어졌습니다. 판매를 중지합니다.
>>>
>>> a=0
>>> while a<10:
...     a=a+1
...     if a%2==0: continue
...     print(a)
...
1
3
5
7
9
>>> while True:
...     print("Ctrl+c를 눌러야 while문을 빠져나갈 수 있습니다.")
...
Ctrl+c를 눌러야 while문을 빠져나갈 수 있습니다.
Ctrl+c를 눌러야 while문을 빠져나갈 수 있습니다.
Ctrl+c를 눌러야 while문을 빠져나갈 수 있습니다.
